--- a/public/index.html
+++ b/public/index.html
@@ -2,17 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/logo.png" />
+    <link rel="icon" href="%PUBLIC_URL%/logo.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="From Concept to Completion, We Provide a Full Spectrum of Technology Services Tailored to Your Needs."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.webp" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="preload" href="/static/media/logo.b6f2718da282956384b7.png" as="image">
-    <link rel="preload" href="%PUBLIC_URL%/logo.png" as="image">
+    <link
+      rel="preload"
+      href="/static/media/logo.b6f2718da282956384b7.webp"
+      as="image"
+    />
+    <link rel="preload" href="%PUBLIC_URL%/logo.webp" as="image" />
     <title>AI Company</title>
   </head>
   <body>
